# cable_ws

./: .gitignore  cable.ured
src/: cable_controller_test_square.py
src/.docker/: mud-sim-amd64env.dockerfile  mud-sim-env.dockerfile  run.bash
src/cable_sim/: CMakeLists.txt  package.xml
src/cable_sim/hooks/: cable_sim.dsv.in
src/cable_sim/launch/: robot.launch.py
src/cable_sim/models/assembly/: model.config  model.sdf
src/cable_sim/models/bluerov2/: model.sdf
src/cable_sim/models/bluerov2/config/: robot_config.py
src/cable_sim/models/cable/: cable.urdf  cable_ori.sdf  model copy.sdf  model.config  model.sdf
src/cable_sim/models/cable2/: model.config  model.sdf
src/cable_sim/models/mark1/: model.config  model.sdf
src/cable_sim/models/mark2/: model.config  model.sdf
src/cable_sim/models/mud/: model.config  model.sdf
src/cable_sim/models/mud/config/: robot_config.py
src/cable_sim/models/mud/meshes/: MUD.stl
src/cable_sim/models/pipe/: model.config  model.sdf
src/cable_sim/models/pipe/meshes/: pipe.stl  pipe_col.stl
src/cable_sim/models/wamv_camera/: model.sdf
src/cable_sim/models/watertank/: model.config  model.sdf
src/cable_sim/models/watertank/meshes/: watertank.stl
src/cable_sim/models/world/pipe/: pipe.stl
src/cable_sim/models/world/watertank/: model.sdf
src/cable_sim/models/world/watertank/meshes/: watertank.glb  watertank.stl
src/cable_sim/world/: water_tank.world.sdf
src/qgc_tools/: gamepad.html  package.xml  setup.cfg  setup.py
src/qgc_tools/launch/: qgc_stack.launch.py
src/teleop/: package.xml  setup.py
(+7 files in other folders)
