<?xml version="1.0"?>
<package format="3">
  <name>cable_sim</name>
  <version>0.0.0</version>
  <description>The cable_sim package</description>
  <maintainer email="bigss@todo.todo">bigss</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
